[package]
name = "twitch-log"
version = "0.1.2"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config        = { version = "0.10", default-features = false, features = ["toml"] }
influxdb      = "0.0.6"
log           = "0.4"
r2d2          = "0.8"
r2d2-influxdb = "0.1"
simplelog     = "0.7"
snafu         = "0.6"
tokio         = { version = "0.2", default-features = false, features = ["macros"] }
twitchchat    = "0.9"
